chore(org): rename to smykla-skalski
Update all references to the organization name:

- Go module path and imports
- Container image references
- GitHub Actions workflows

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/.github/sync-config.yml
+++ b/.github/sync-config.yml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/smykla-labs/.github/main/schemas/sync-config.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/smykla-skalski/.github/main/schemas/sync-config.schema.json
 ---
 # Unified Sync Configuration
 # Enable label removal to keep labels in sync with central config
