--- a/.mise.toml
+++ b/.mise.toml
@@ -10,6 +10,7 @@ task = "3.42.0"                            # Task runner
 "npm:markdownlint-cli" = "0.47.0"          # Markdown linter
 "go:github.com/onsi/ginkgo/v2/ginkgo" = "2.27.3" # Ginkgo test runner
 actionlint = "1.7.9"                       # GitHub Actions linter
+ginkgo = "2.27.2"                          # Ginkgo test runner
 
 [env]
 GO111MODULE = "on"
