--- a/renovate.json
+++ b/renovate.json
@@ -66,7 +66,7 @@
       "description": "Smyklot action managed by sync-smyklot workflow",
       "enabled": false,
       "matchManagers": ["github-actions"],
-      "matchPackageNames": ["smykla-labs/smyklot"]
+      "matchPackageNames": ["smykla-skalski/smyklot"]
     }
   ],
   "rebaseWhen": "conflicted",
