feat(lint): migrate to markdownlint-cli2
Replace markdownlint-cli with markdownlint-cli2
in mise, Taskfile, and config. Consolidate
.markdownlint.json into .markdownlint-cli2.jsonc
with ignores baked in.

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -97,10 +97,10 @@ tasks:
         fi
 
   lint:markdown:
-    desc: Lint Markdown files
+    desc: Lint Markdown files with markdownlint-cli2
     cmds:
       - echo "▶ Linting Markdown files"
-      - markdownlint '**/*.md' --ignore node_modules --ignore vendor --ignore tmp
+      - markdownlint-cli2 "**/*.md"
       - echo "✓ Markdown files pass linting"
 
   lint:mod:
